--- a/githubSite/games/TicTacToe/src/TicTacToe.html
+++ b/githubSite/games/TicTacToe/src/TicTacToe.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a class="home-btn" onclick="window.location.href='../../../main/index.html'">
+        <a class="home-btn" id="home">
             <img id="home-img" src="../../../images/other/home.png">
           </a>
         <h1 id="h1" class="neonText pulsate">Tic Tac Toe</h1>
