--- a/githubSite/games/kanjiGame/index.html
+++ b/githubSite/games/kanjiGame/index.html
@@ -11,7 +11,7 @@
     <title>where is the kanji ?</title>
     </head>
     <body>
-        <a class="home-btn" onclick="window.location.href='../../main/index.html'">
+        <a class="home-btn" id="home">
             <img id="home-img" src="../../images/other/home.png">
          </a>
        <h1 id="score"></h1>
