--- a/githubSite/games/nazonazo/question.html
+++ b/githubSite/games/nazonazo/question.html
@@ -17,7 +17,7 @@
     </head>
   
     <body id="body">
-      <a class="home-btn" onclick="window.location.href='../../main/index.html'">
+      <a class="home-btn" id="home">
         <img id="home-img" src="../../images/other/home.png">
       </a>
             <h3 id="h1">0/0</h3>
