--- a/githubSite/games/pixelPicture/index.html
+++ b/githubSite/games/pixelPicture/index.html
@@ -13,7 +13,7 @@
     </head>
   
     <body>
-        <a class="home-btn" onclick="window.location.href='../../main/index.html'">
+        <a class="home-btn" id="home">
             <img id="home-img" src="../../images/other/home.png">
           </a>
         <div id="display">
