--- a/githubSite/games/colorGame/index.html
+++ b/githubSite/games/colorGame/index.html
@@ -13,7 +13,7 @@
 <title>where is the color ?</title>
     </head>
     <body>
-        <a class="home-btn" onclick="window.location.href='../../main/index.html'">
+        <a class="home-btn" id="home">
            <img id="home-img" src="../../images/other/home.png">
         </a>
        <h1 id="score"></h1>
