--- a/githubSite/games/tippingGame/index.html
+++ b/githubSite/games/tippingGame/index.html
@@ -11,7 +11,7 @@
     <title>Tipping</title>
     </head>
     <body>
-        <a class="home-btn" onclick="window.location.href='../../main/index.html'">
+        <a class="home-btn" id="home">
             <img id="home-img" src="../../images/other/home.png">
         </a>
  
