--- a/githubSite/games/numbers/index.html
+++ b/githubSite/games/numbers/index.html
@@ -12,7 +12,9 @@
 <title>Get the sequence right</title>
     </head>
     <body id="body">
-       
+      <a class="home-btn" id="home">
+        <img id="home-img" src="../../images/other/home.png">
+      </a>
         <button type="button" id="start">Start</button>
        
       <div id="content">
