--- a/githubSite/games/colorGame/index.html
+++ b/githubSite/games/colorGame/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="../../images/logo/gk_bar.png" sizes="16x16" type="image/png">
         <!-- 検索エンジンに表示しない -->
         <meta name="robots" content="noindex,nofollow" />
-        <title>Tic Tac Toe</title>
+        <title>Color Game</title>
         <link rel="stylesheet" href="style.css">
 
 <title>where is the color ?</title>
