--- a/githubSite/main/index.html
+++ b/githubSite/main/index.html
@@ -11,9 +11,10 @@
     <title>GamesOfKingdom</title>
     </head>
     <body>
-        <img src="../images/logo/GK.png" width="450" height="250">
+        <img src="../images/logo/GK.png" id="logo">
         <input type="text" id="searchBox" placeholder="search" />
         <div class="wrapper" >
+            <h1 id="timer">00:00</h1>
             <div class="container" id="container">
             </div>
         </div>
