--- a/githubSite/games/multiTermo/index_phone.html
+++ b/githubSite/games/multiTermo/index_phone.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="JP">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,7 +18,7 @@
         </div>
         <div id="keyboard">
           
-            </div>
+        </div>
         </div>
         <div id="information"><img src="img/info.png" id="icon-info"></div>
         <a class="home-btn" id="home">
