--- a/githubSite/main/index.html
+++ b/githubSite/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="../images/logo/gk_bar.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="../images/logo/GK.png" sizes="16x16" type="image/png">
     <!-- 検索エンジンに表示しない -->
     <!-- <meta name="robots" content="noindex,nofollow" /> -->
     <link rel="stylesheet" href="css/style.css" />
@@ -12,8 +12,8 @@
     </head>
     <body>
         <img src="../images/logo/GK.png" id="logo">
-        <input type="text" id="searchBox" placeholder="search" />
         <div class="wrapper" >
+            <input type="text" id="searchBox" placeholder="search" />
             <h1 id="timer">00:00</h1>
             <div class="container" id="container">
             </div>
